--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
     <meta name="author" content="">
 
 
-    <title>Blog Template for Bootstrap</title>
+    <title>Resume | Jake Lee</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
+    <!-- Icons for socials -->
+    <script src="https://kit.fontawesome.com/85539b08a7.js" crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
@@ -26,13 +28,13 @@
             <a class="text-muted" href="#"></a>
           </div>
           <div class="col-4 text-center">
-            <a class="blog-header-logo text-dark" href="#">Jake Lee</a>
+            <a class="blog-header-logo text-dark" href="index.html">Jake Lee</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
             <a class="text-muted" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-3"><circle cx="10.5" cy="10.5" r="7.5"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
             </a>
-            <a class="btn btn-sm btn-outline-secondary" href="#">Contact me</a>
+            <a class="btn btn-sm btn-outline-secondary" href="contact.html">Contact me</a>
           </div>
         </div>
       </header>
@@ -145,10 +147,10 @@
           <div class="p-3">
             <h4 class="font-italic">Elsewhere</h4>
             <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">GitLab</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">LinkedIn</a></li>
+              <li><span class="fab fa-github"></span><a href="#">GitHub</a></li>
+              <li><span class="fab fa-gitlab"></span><a href="#">GitLab</a></li>
+              <li><span class="fab fa-twitter"></span><a href="#">Twitter</a></li>
+              <li><span class="fab fa-linkedin"></span><a href="#">LinkedIn</a></li>
             </ol>
           </div>
         </aside><!-- /.blog-sidebar -->
