--- a/src/contact.html
+++ b/src/contact.html
@@ -102,7 +102,7 @@
                     </form>
 
                     <div class="text-center text-md-left">
-                        <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                        <button type="button" class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</button>
                     </div>
 
 
