--- a/src/contact.html
+++ b/src/contact.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -15,29 +16,33 @@
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
-  </head>
+</head>
 
 
 <body>
 
     <div class="container">
         <header class="blog-header py-3">
-          <div class="row flex-nowrap justify-content-between align-items-center">
-            <div class="col-4 pt-1">
-              <a class="text-muted" href="#"></a>
+            <div class="row flex-nowrap justify-content-between align-items-center">
+                <div class="col-4 pt-1">
+                    <a class="text-muted" href="#"></a>
+                </div>
+                <div class="col-4 text-center">
+                    <a class="blog-header-logo text-dark" href="index.html">Jake Lee</a>
+                </div>
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                    <a class="text-muted" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="mx-3">
+                            <circle cx="10.5" cy="10.5" r="7.5"></circle>
+                            <line x1="21" y1="21" x2="15.8" y2="15.8"></line>
+                        </svg>
+                    </a>
+                    <a class="btn btn-sm btn-outline-secondary" href="index.html">Back</a>
+                </div>
             </div>
-            <div class="col-4 text-center">
-              <a class="blog-header-logo text-dark" href="index.html">Jake Lee</a>
-            </div>
-            <div class="col-4 d-flex justify-content-end align-items-center">
-              <a class="text-muted" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-3"><circle cx="10.5" cy="10.5" r="7.5"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
-              </a>
-              <a class="btn btn-sm btn-outline-secondary" href="index.html">Back</a>
-            </div>
-          </div>
         </header>
-
         <section class="mb-4">
 
             <!--Section heading-->
@@ -91,29 +96,25 @@
                             <div class="col-md-12">
 
                                 <div class="md-form">
-                                    <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                                    <textarea type="text" id="message" name="message" rows="2"
+                                        class="form-control md-textarea"></textarea>
                                     <label for="message">Your message</label>
                                 </div>
 
                             </div>
                         </div>
-                        <!--Grid row-->
-
                     </form>
-
                     <div class="text-center text-md-left">
-                        <button type="button" class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</button>
+                        <button type="button" class="btn btn-primary"
+                            onclick="document.getElementById('contact-form').submit();">Send</button>
                     </div>
-
-
         </section>
+        <style>
+            .empty-space {
+                height: calc(100vh - 80px);
+                /* 100% of viewport height minus height of header */
+            }
+        </style>
+</body>
 
-
-
-    <style>
-      .empty-space {
-        height: calc(100vh - 80px); /* 100% of viewport height minus height of header */
-      }
-    </style>
-  </body>
 </html>
