--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Resume | Jake Lee</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Icons for socials -->
     <script src="https://kit.fontawesome.com/85539b08a7.js" crossorigin="anonymous"></script>
 
