--- a/src/index.html
+++ b/src/index.html
@@ -22,39 +22,44 @@
   <body>
     <div class="container">
       <header class="blog-header py-3">
-        <div class="row flex-nowrap justify-content-between align-items-center">
-          <div class="col-4 pt-1">
-            <a class="text-muted" href="#"></a>
+        <div class="row align-items-center">
+          <div class="col-4">
+            <div class="social-icons">
+              <a href="https://github.com/yourusername"><i class="fab fa-github"></i></a>
+              <a href="https://gitlab.com/yourusername"><i class="fab fa-gitlab"></i></a>
+              <a href="https://www.linkedin.com/in/yourusername"><i class="fab fa-linkedin"></i></a>
+            </div>
           </div>
           <div class="col-4 text-center">
             <a class="blog-header-logo text-dark" href="index.html">Jake Lee</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
-            <a class="text-muted" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-3"><circle cx="10.5" cy="10.5" r="7.5"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
-            </a>
             <a class="btn btn-sm btn-outline-secondary" href="contact.html">Contact me</a>
           </div>
         </div>
       </header>
 
 
+
+
       <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
-          <a class="p-2 text-muted" href="#">World</a>
-          <a class="p-2 text-muted" href="#">U.S.</a>
-          <a class="p-2 text-muted" href="#">Technology</a>
-          <a class="p-2 text-muted" href="#">Design</a>
+          <a class="p-2 text-muted" href="#">Work Experience</a>
+          <a class="p-2 text-muted" href="#">Projects</a>
+          <a class="p-2 text-muted" href="#">Recognition</a>
         </nav>
       </div>
+
+      <aside class="col-md-4 blog-sidebar">
+        <div class="p-3 mb-3 bg-light rounded">
+          <h4 class="font-italic">About</h4>
+          <p class="mb-0">Text</p>
+        </div>
+      </aside><!-- /.blog-sidebar -->
 
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8 blog-main">
-          <h3 class="pb-3 mb-4 font-italic border-bottom">
-            From the Firehose
-          </h3>
-
           <div class="blog-post">
             <h1 class="blog-post-title">Sample blog post</h1>
             <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
@@ -113,55 +118,16 @@
             <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
             <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
           </div><!-- /.blog-post -->
-
-          <nav class="blog-pagination">
-            <a class="btn btn-outline-primary" href="#">Older</a>
-            <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
-          </nav>
-
         </div><!-- /.blog-main -->
 
-        <aside class="col-md-4 blog-sidebar">
-          <div class="p-3 mb-3 bg-light rounded">
-            <h4 class="font-italic">About</h4>
-            <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-          </div>
 
-          <div class="p-3">
-            <h4 class="font-italic">Archives</h4>
-            <ol class="list-unstyled mb-0">
-              <li><a href="#">March 2014</a></li>
-              <li><a href="#">February 2014</a></li>
-              <li><a href="#">January 2014</a></li>
-              <li><a href="#">December 2013</a></li>
-              <li><a href="#">November 2013</a></li>
-              <li><a href="#">October 2013</a></li>
-              <li><a href="#">September 2013</a></li>
-              <li><a href="#">August 2013</a></li>
-              <li><a href="#">July 2013</a></li>
-              <li><a href="#">June 2013</a></li>
-              <li><a href="#">May 2013</a></li>
-              <li><a href="#">April 2013</a></li>
-            </ol>
-          </div>
-
-          <div class="p-3">
-            <h4 class="font-italic">Elsewhere</h4>
-            <ol class="list-unstyled">
-              <li><span class="fab fa-github"></span><a href="#">GitHub</a></li>
-              <li><span class="fab fa-gitlab"></span><a href="#">GitLab</a></li>
-              <li><span class="fab fa-twitter"></span><a href="#">Twitter</a></li>
-              <li><span class="fab fa-linkedin"></span><a href="#">LinkedIn</a></li>
-            </ol>
-          </div>
-        </aside><!-- /.blog-sidebar -->
 
       </div><!-- /.row -->
 
     </main><!-- /.container -->
 
     <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>Footer</p>
       <p>
         <a href="#">Back to top</a>
       </p>
