--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
         <div class="row align-items-center">
           <div class="col-4">
             <div class="social-icons">
-              <a href="https://github.com/yourusername"><i class="fab fa-github"></i></a>
-              <a href="https://gitlab.com/yourusername"><i class="fab fa-gitlab"></i></a>
-              <a href="https://www.linkedin.com/in/yourusername"><i class="fab fa-linkedin"></i></a>
+              <a href="https://github.com/"><i class="fab fa-github"></i></a>
+              <a href="https://gitlab.com/"><i class="fab fa-gitlab"></i></a>
+              <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
             </div>
           </div>
           <div class="col-4 text-center">
