reorganize file structure

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -34,7 +34,7 @@
             <a class="blog-header-logo text-dark" href="index.html">Jake Lee</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
-            <a class="btn btn-sm btn-outline-secondary" href="contact.html">Contact me</a>
+            <a class="btn btn-sm btn-outline-secondary" href="contact/contact.html">Contact me</a>
           </div>
         </div>
       </header>
