add dark mode icon to nav bar

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -109,6 +109,7 @@
                 /* 100% of viewport height minus height of header */
             }
         </style>
+        <script src="email.js"></script>
 </body>
 
 </html>
