--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -34,7 +34,8 @@
             <a class="blog-header-logo text-dark" href="index.html">Jake Lee</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
-            <a class="btn btn-sm btn-outline-secondary" href="contact/contact.html">Contact me</a>
+            <img src="images/dark theme icon/moon.png" id="dark_mode_icon">
+            <a class="btn btn-sm btn-outline-secondary ml-3" href="contact/contact.html">Contact me</a>
           </div>
         </div>
       </header>
@@ -62,6 +63,7 @@
         <div class="col-md-8 blog-main">
           <div class="blog-post">
             <h1 class="blog-post-title">Sample blog post</h1>
+            <a href="#" class="hvr-grow">Add to Basket</a>
             <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
 
             <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
