--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -148,5 +148,6 @@
         text: 'Thumbnail'
       });
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </body>
 </html>
