--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -64,6 +64,10 @@
           <div class="blog-post">
             <h1 class="blog-post-title">Sample blog post</h1>
             <a href="#" class="hvr-grow">Add to Basket</a>
+            <div>
+              <span id="visitor-count"></span>
+              <h4>Visitor Count</h4>
+            </div>
             <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
 
             <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
