--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -22,7 +22,7 @@
   <body class="flex flex-col justify-center items-center">
     <div class="container mx-auto bg-slate-100 m-2 px-6">
       <header class="blog-header py-3">
-        <div class="flex items-center justify-center">
+        <div class="flex items-center justify-around">
           <div class="w-1/4">
             <div class="social-icons">
               <a href="https://github.com/jakeoliverlee"><i class="fab fa-github"></i></a>
@@ -40,8 +40,9 @@
         </div>
       </header>
     </div>
+    </div>
   
-    <div class="nav-scroller py-1 mb-2 mr-3.5">
+    <div class="nav-scroller py-1 mb-2 mr-4 mt-1">
       <nav class="nav d-flex justify-content-between">
         <a class="p-2 text-muted border-r" href="#">Work Experience</a>
         <a class="p-2 text-muted border-r" href="#">Projects</a>
