--- a/src/expressjs/pages/contact/contact.html
+++ b/src/expressjs/pages/contact/contact.html
@@ -20,35 +20,35 @@
   </head>
 
   <body class="flex flex-col justify-center items-center">
-    <div class="container mx-auto bg-slate-100 m-2 px-4">
+    <div class="container mx-auto bg-slate-100 m-2 px-6">
       <header class="blog-header py-3">
-        <div class="flex items-center justify-center">
+        <div class="flex items-center justify-around">
           <div class="w-1/4">
-            <div class="social-icons flex items-center justify-center gap-2 mr-200000">
-              <a href="https://github.com/jakeoliverlee" class="inline-block"><i class="fab fa-github"></i></a>
-              <a href="https://gitlab.com/jakeoliverlee" class="inline-block"><i class="fab fa-gitlab"></i></a>
-              <a href="https://www.linkedin.com/in/jake-lee-4aa088129/" class="inline-block"><i class="fab fa-linkedin"></i></a>
+            <div class="social-icons">
+              <a href="https://github.com/jakeoliverlee"><i class="fab fa-github"></i></a>
+              <a href="https://gitlab.com/jakeoliverlee"><i class="fab fa-gitlab"></i></a>
+              <a href="https://www.linkedin.com/in/jake-lee-4aa088129/"><i class="fab fa-linkedin"></i></a>
             </div>
           </div>
           <div class="w-1/4 text-center">
             <a class="blog-header-logo text-dark" href="#">Jake Lee</a>
           </div>
           <div class="w-1/4 flex justify-end items-center">
-            <img src="images/dark theme icon/moon.png" id="dark_mode_icon" class="ml-2">
-            <a class="inline-block px-3 py-1 text-sm font-semibold text-gray-700 border border-gray-400 rounded hover:bg-gray-200 ml-3" href="../index.html">Back</a>
+            <img src="images/dark theme icon/moon.png" id="dark_mode_icon">
+            <a class="inline-block px-3 py-1 text-sm font-semibold text-gray-700 border border-gray-400 rounded hover:bg-gray-200 ml-6" href="../index.html">Back</a>
           </div>
         </div>
       </header>
     </div>
+    </div>
   
-    <div class="nav-scroller py-1 mb-2">
+    <div class="nav-scroller py-1 mb-2 mr-4 mt-1">
       <nav class="nav d-flex justify-content-between">
-        <a class="p-2 text-muted" href="#">Work Experience</a>
-        <a class="p-2 text-muted" href="#">Projects</a>
+        <a class="p-2 text-muted border-r" href="#">Work Experience</a>
+        <a class="p-2 text-muted border-r" href="#">Projects</a>
         <a class="p-2 text-muted" href="#">Recognition</a>
       </nav>
     </div>
-  </body>
   
     
 
