--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body class="flex flex-col items-center bg-slate-100">
-    <div class="container mx-auto bg-white m-2 px-6 rounded-lg">
+    <div id="main" class="container mx-auto bg-white m-2 px-6 rounded-lg dark:bg-slate-900">
       <header class="blog-header py-3">
         <div class="flex items-center justify-around">
           <div class="w-1/4">
@@ -30,27 +30,35 @@
               <a href="https://www.linkedin.com/in/jake-lee-4aa088129/"><i class="fab fa-linkedin"></i></a>
             </div>
           </div>
-          <div class="w-1/4 text-center mr-3">
+          <div class="w-1/4 text-center">
             <a class="blog-header-logo text-dark" href="#">Jake Lee</a>
           </div>
           <div class="w-1/4 flex justify-end items-center">
-            <img src="images/dark theme icon/moon.png" id="dark_mode_icon">
-            <a class="inline-block px-3 py-1 text-sm font-semibold text-gray-700 border border-gray-400 rounded hover:bg-blue-200 ml-6" href="/contact">Contact me</a>
+            <img src="images/dark theme icon/moon.png" id="dark_mode_icon" class="hover:shadow-2xl hover:shadow-blue-500/50">
+            <a class="inline-block px-3 py-1 text-sm font-semibold text-gray-700 border border-gray-400 rounded hover:bg-blue-200 hover:opacity-40 hover:rotate-12 ml-6 transition duration-750" href="/contact">Contact me</a>
           </div>
         </div>
       </header>
     </div>
   
-    <div class="nav-scroller py-1 mb-2 mr-5 mt-1 justify-start text-left">
+    <div class="nav-scroller py-1 mb-2 mt-1 ml-5 px-1 pr-4 pl-4 justify-start text-left rounded-full bg-white/90">
       <nav class="nav d-flex justify-content-between">
-        <a id="work-experience-link" class="p-2 text-muted border-r font-weight-bold" href="#">Work Experience</a>
-        <a id="projects-link" class="p-2 text-muted border-r" href="#">Projects</a>
-        <a id="recognition-link" class="p-2 text-muted" href="#">Recognition</a>
+        <a id="work-experience-link" class="p-2 text-muted border-r font-weight-bold" href="#">Projects</a>
+        <a id="projects-link" class="p-2 text-muted border-r" href="#">Work</a>
+        <a id="recognition-link" class="p-2 text-muted" href="#">Gadgets</a>
       </nav>
     </div>
-      <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-blue-500/50 border-x-2 rounded-lg">
+    <div class="container mx-auto h-72 bg-white m-2 px-6 rounded-lg">
+      <div id="about-me" class="w-96 mt-7 ml-4 p-3 shadow-2xl shadow-blue-500/50 border-x-2 rounded-lg">
             Hey this is an about me!
       </div>
+      <div class="grid grid-cols-3 mt-10 gap-10">
+        <div class="p-10 border border-blue-600 bg-blue-100">Item 1</div>
+        <div class="p-10 border border-blue-600 bg-blue-100">Item 3</div>
+      </div>
+    </div>
+  </div>
+  
     
   
    
@@ -73,5 +81,6 @@
         text: 'Thumbnail'
       });
     </script>
+    
   </body>
 </html>
