--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -41,11 +41,11 @@
       </header>
     </div>
   
-    <div class="nav-scroller py-1 mb-2 mt-1 ml-5 px-1 pr-4 pl-4 justify-start text-left rounded-full bg-white/90">
-      <nav class="nav d-flex justify-content-between">
-        <a id="work-experience-link" class="p-2 text-muted border-r font-weight-bold" href="#">Projects</a>
-        <a id="projects-link" class="p-2 text-muted border-r" href="#">Work</a>
-        <a id="recognition-link" class="p-2 text-muted" href="#">Gadgets</a>
+    <div class="py-1 nav-scroller mb-2 mt-1 ml-5 justify-start text-left rounded-full bg-white/90">
+      <nav class=" px-3 nav d-flex justify-content-between">
+        <a id="work-experience-link" class="px-3 py-2 text-muted" href="#">Projects</a>
+        <a id="projects-link" class="px-3 py-2 text-muted" href="#">Work</a>
+        <a id="recognition-link" class="px-3 py-2 text-muted" href="#">Gadgets</a>
       </nav>
     </div>
     <div class="container mx-auto h-72 bg-white m-2 px-6 rounded-lg">
