change nav bar shadow from shadow-lg to shadow-md

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -43,7 +43,7 @@
       </header>
     </div>
 
-    <div class="py-1 nav-scroller mb-2 mt-1 ml-5 justify-start text-left rounded-full bg-white/90 shadow-lg text-sm font-medium">
+    <div class="py-1 nav-scroller mb-2 mt-1 ml-5 justify-start text-left rounded-full bg-white/90 shadow-md text-sm font-medium">
       <nav class=" px-3 nav d-flex justify-content-between">
         <a id="work-experience-link" class="font-sans px-3 py-2 text-muted" href="#">Projects</a>
         <a id="projects-link" class="font-sans px-3 py-2 text-muted" href="#">Work</a>
