add hr between about-me and work experience, add work experience icon and title

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
 
   <body class="flex flex-col items-center bg-slate-100">
@@ -58,8 +59,20 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et lorem at turpis congue aliquet. Donec tellus justo, euismod eu viverra sit amet, vulputate convallis erat. Sed eu elementum justo, ac ornare nisi. In interdum erat purus, eu porttitor dolor pulvinar id. Suspendisse scelerisque ultrices nulla nec consectetur. Curabitur nec sapien at urna egestas faucibus. Pellentesque tempor lacinia dolor, in euismod nisi lobortis non. Sed quis ante nunc. Morbi laoreet lorem sit amet ligula venenatis, ut lobortis sapien fringilla. Cras id mauris scelerisque, placerat tortor nec, vehicula ex. Vestibulum et turpis arcu. Pellentesque euismod est at arcu tempor, in efficitur sapien maximus. Nulla tristique lorem et quam fermentum, eget posuere sem blandit. Sed ac risus tempus, fermentum neque a, tempor odio. Vivamus ultricies nisi sit amet tincidunt laoreet. Sed in consequat nibh.
           </p>
       </div>
-    </div>
-  </div>
+      <hr class="opacity-10 m-2">
+      <div class="space-y-4 m-2 mt-4">
+        <span class="block ml-2">
+          <div class="space-x-4 flex items-center">
+              <span class="material-symbols-outlined my-2">
+                work
+              </span>
+              <span class="text-md font-medium">Work Experience</span>
+          </div>
+        </span>
+        <span class="block ...">2</span>
+        <span class="block ...">3</span>
+      </div>
+
 
 
 
