--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
 
@@ -38,7 +38,7 @@
             <a class="blog-header-logo text-dark" href="#">Jake Lee</a>
           </div>
           <div class="w-1/4 flex justify-end items-center">
-            <img src="images/dark theme icon/moon.png" id="dark_mode_icon" class="hover:shadow-2xl hover:shadow-blue-500/50">
+            <img src="assets/images/dark theme icon/moon.png" id="dark_mode_icon" class="hover:shadow-2xl hover:shadow-blue-500/50">
             <a class="font-sans inline-block px-3 py-1 text-sm font-semibold text-gray-700 border border-gray-400 rounded hover:bg-blue-200 hover:opacity-40 ml-6 transition duration-750 shadow-md" href="/contact">Contact me</a>
           </div>
         </div>
@@ -54,32 +54,61 @@
     </div>
     <div class="container mx-auto h-full bg-white m-2 px-6 rounded-lg">
       <div id="about-me" class="mt-7 ml-4 p-3">
-          <h1 class="text-4xl font-bold">Data Centre Engineer, amaeteur developer.</h1>
+          <h1 class="text-4xl font-bold">Data Centre Engineer, amateur developer.</h1>
           <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et lorem at turpis congue aliquet. Donec tellus justo, euismod eu viverra sit amet, vulputate convallis erat. Sed eu elementum justo, ac ornare nisi. In interdum erat purus, eu porttitor dolor pulvinar id. Suspendisse scelerisque ultrices nulla nec consectetur. Curabitur nec sapien at urna egestas faucibus. Pellentesque tempor lacinia dolor, in euismod nisi lobortis non. Sed quis ante nunc. Morbi laoreet lorem sit amet ligula venenatis, ut lobortis sapien fringilla. Cras id mauris scelerisque, placerat tortor nec, vehicula ex. Vestibulum et turpis arcu. Pellentesque euismod est at arcu tempor, in efficitur sapien maximus. Nulla tristique lorem et quam fermentum, eget posuere sem blandit. Sed ac risus tempus, fermentum neque a, tempor odio. Vivamus ultricies nisi sit amet tincidunt laoreet. Sed in consequat nibh.
           </p>
       </div>
-      <hr class="opacity-10 m-2">
-      <div class="space-y-4 m-2 mt-4">
+      <hr class="opacity-5 m-2">
+      <div class="space-y-4 my-4 m-2 mt-4 w-1/2 rounded-2xl border p-6 shadow-md">
         <span class="block ml-2">
           <div class="space-x-4 flex items-center">
-              <span class="material-symbols-outlined my-2">
-                work
-              </span>
-              <span class="text-md font-medium">Work Experience</span>
+            <span class="material-symbols-outlined my-2">
+              work
+            </span>
+            <span class="text-lg font-medium">Work Experience</span>
           </div>
         </span>
-        <span class="block ...">2</span>
-        <span class="block ...">3</span>
+        <span class="block ml-4">
+          <div class="flex space-x-2 items-center">
+            <img class="w-6 h-6" src="assets/svgs/aws-icon.svg" alt="AWS Icon">
+            <span class="text-md font-medium">Company 1</span>
+            <span class="ml-2">
+              <i class="fas fa-arrow-up text-blue-500"></i>
+            </span>
+          </div>
+          <p class="ml-10 mt-2 text-sm text-gray-600">Position 1, Date 1</p>
+          <ul class="list-disc ml-10 mt-2">
+            <li class="text-xs text-gray-500">Previous Position, Date</li>
+          </ul>
+        </span>
+        <span class="block ml-4">
+          <div class="flex space-x-2 items-center">
+            <span class="bullet">&bull;</span>
+            <span class="text-md font-medium">Company 2</span>
+            <span class="ml-2">
+              <i class="fas fa-arrow-up text-blue-500"></i>
+            </span>
+          </div>
+          <p class="ml-10 mt-2 text-sm text-gray-600">Position 2, Date 2</p>
+          <ul class="list-disc ml-10 mt-2">
+            <li class="text-xs text-gray-500">Previous Position, Date</li>
+          </ul>
+        </span>
+        <span class="block ml-4">
+          <div class="flex space-x-2 items-center">
+            <span class="bullet">&bull;</span>
+            <span class="text-md font-medium">Company 3</span>
+            <span class="ml-2">
+              <i class="fas fa-arrow-up text-blue-500"></i>
+            </span>
+          </div>
+          <p class="ml-10 mt-2 text-sm text-gray-600">Position 3, Date 3</p>
+          <ul class="list-disc ml-10 mt-2">
+            <li class="text-xs text-gray-500">Previous Position, Date</li>
+          </ul>
+        </span>
       </div>
-
-
-
-
-
-
-
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
