add shadow and border to aws icon svg, add spacing and content to work experience section

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -54,61 +54,90 @@
     </div>
     <div class="container mx-auto h-full bg-white m-2 px-6 rounded-lg">
       <div id="about-me" class="mt-7 ml-4 p-3">
-          <h1 class="text-4xl font-bold">Data Centre Engineer, amateur developer.</h1>
+          <h1 class="text-4xl font-bold">lorv em and alfie</h1>
           <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et lorem at turpis congue aliquet. Donec tellus justo, euismod eu viverra sit amet, vulputate convallis erat. Sed eu elementum justo, ac ornare nisi. In interdum erat purus, eu porttitor dolor pulvinar id. Suspendisse scelerisque ultrices nulla nec consectetur. Curabitur nec sapien at urna egestas faucibus. Pellentesque tempor lacinia dolor, in euismod nisi lobortis non. Sed quis ante nunc. Morbi laoreet lorem sit amet ligula venenatis, ut lobortis sapien fringilla. Cras id mauris scelerisque, placerat tortor nec, vehicula ex. Vestibulum et turpis arcu. Pellentesque euismod est at arcu tempor, in efficitur sapien maximus. Nulla tristique lorem et quam fermentum, eget posuere sem blandit. Sed ac risus tempus, fermentum neque a, tempor odio. Vivamus ultricies nisi sit amet tincidunt laoreet. Sed in consequat nibh.
           </p>
       </div>
       <hr class="opacity-5 m-2">
       <div class="space-y-4 my-4 m-2 mt-4 w-1/2 rounded-2xl border p-6 shadow-md">
-        <span class="block ml-2">
-          <div class="space-x-4 flex items-center">
-            <span class="material-symbols-outlined my-2">
-              work
-            </span>
-            <span class="text-lg font-medium">Work Experience</span>
-          </div>
-        </span>
-        <span class="block ml-4">
-          <div class="flex space-x-2 items-center">
-            <img class="w-6 h-6" src="assets/svgs/aws-icon.svg" alt="AWS Icon">
-            <span class="text-md font-medium">Company 1</span>
-            <span class="ml-2">
-              <i class="fas fa-arrow-up text-blue-500"></i>
-            </span>
-          </div>
-          <p class="ml-10 mt-2 text-sm text-gray-600">Position 1, Date 1</p>
-          <ul class="list-disc ml-10 mt-2">
-            <li class="text-xs text-gray-500">Previous Position, Date</li>
-          </ul>
-        </span>
-        <span class="block ml-4">
-          <div class="flex space-x-2 items-center">
-            <span class="bullet">&bull;</span>
-            <span class="text-md font-medium">Company 2</span>
-            <span class="ml-2">
-              <i class="fas fa-arrow-up text-blue-500"></i>
-            </span>
-          </div>
-          <p class="ml-10 mt-2 text-sm text-gray-600">Position 2, Date 2</p>
-          <ul class="list-disc ml-10 mt-2">
-            <li class="text-xs text-gray-500">Previous Position, Date</li>
-          </ul>
-        </span>
-        <span class="block ml-4">
-          <div class="flex space-x-2 items-center">
-            <span class="bullet">&bull;</span>
-            <span class="text-md font-medium">Company 3</span>
-            <span class="ml-2">
-              <i class="fas fa-arrow-up text-blue-500"></i>
-            </span>
-          </div>
-          <p class="ml-10 mt-2 text-sm text-gray-600">Position 3, Date 3</p>
-          <ul class="list-disc ml-10 mt-2">
-            <li class="text-xs text-gray-500">Previous Position, Date</li>
-          </ul>
-        </span>
-      </div>
+        <div class="space-y-4">
+          <span class="block ml-2">
+            <div class="space-x-4 flex items-center">
+              <span class="material-symbols-outlined my-2">
+                work
+              </span>
+              <span class="text-lg font-medium">Work Experience</span>
+            </div>
+          </span>
+          <span class="block ml-4">
+            <div class="flex space-x-2 items-center">
+              <img class="w-6 h-6 rounded-full shadow-md border border-white" src="assets/svgs/aws-icon.svg" alt="AWS Icon">
+              <span class="text-md font-medium">Amazon Web Services</span>
+            </div>
+            <p class="ml-10 mt-2 text-sm text-gray-600">
+              <strong>DCO Team Lead</strong>, <em>01/2023-present</em>
+            </p>
+            <p class="ml-14 mt-2 text-sm text-gray-600 italic">
+              Description of position 1 at Company 1:
+              <ul class="list-disc ml-16 mt-2">
+                <li class="text-xs text-gray-500">Bullet point 1</li>
+                <li class="text-xs text-gray-500">Bullet point 2</li>
+                <li class="text-xs text-gray-500">Bullet point 3</li>
+              </ul>
+            </p>
+            <p class="ml-10 mt-4 text-sm text-gray-600">
+              DCO 4, <em>12/2022 - present</em>
+              <span class="ml-2">
+                <i class="fas fa-arrow-up text-blue-500"></i>
+              </span>
+            </p>
+            <p class="ml-14 mt-2 text-sm text-gray-600 italic">
+              Description of position 1 at Company 1:
+              <ul class="list-disc ml-16 mt-2">
+                <li class="text-xs text-gray-500">Bullet point 1</li>
+                <li class="text-xs text-gray-500">Bullet point 2</li>
+                <li class="text-xs text-gray-500">Bullet point 3</li>
+              </ul>
+            </p>
+            <p class="ml-10 mt-4 text-sm text-gray-600">
+              DCO 3, <em>11/2020 - 12/2022</em>
+              <span class="ml-2">
+                <i class="fas fa-arrow-up text-blue-500"></i>
+              </span>
+            </p>
+            <p class="ml-14 mt-2 text-sm text-gray-600 italic">
+              Description of position 1 at Company 1:
+              <ul class="list-disc ml-16 mt-2">
+                <li class="text-xs text-gray-500">Bullet point 1</li>
+                <li class="text-xs text-gray-500">Bullet point 2</li>
+                <li class="text-xs text-gray-500">Bullet point 3</li>
+              </ul>
+            </p>
+            </ul>
+          </span>
+
+
+          <span class="block ml-4">
+            <div class="flex space-x-2 items-center">
+              <span class="bullet">&bull;</span>
+              <span class="text-md font-medium">Company 2</span>
+            </div>
+            <p class="ml-10 mt-2 text-sm text-gray-600">
+              Position 2, <em>Date 2</em>
+            </p>
+            <p class="ml-14 mt-2 text-sm text-gray-600 italic">
+              Description of position 2 at Company 2
+            </p>
+            <ul class="list-disc ml-10 mt-2">
+              <li class="text-xs text-gray-500">
+                Previous Position, <em>Date</em>
+                <span class="ml-2">
+                  <i class="fas fa-arrow-up text-blue-500"></i>
+                </span>
+              </li>
+            </ul>
+          </span>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
