add further detail to work experience section including total tenure to each position, add svg for qinetiq

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
 
 
-    <title>Jake Lee | Resume </title>
+    <title>Jake Lee | Resume</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -39,7 +39,7 @@
           </div>
           <div class="w-1/4 flex justify-end items-center">
             <img src="assets/images/dark theme icon/moon.png" id="dark_mode_icon" class="hover:shadow-2xl hover:shadow-blue-500/50">
-            <a class="font-sans inline-block px-3 py-1 text-sm font-semibold text-gray-700 border border-gray-400 rounded hover:bg-blue-200 hover:opacity-40 ml-6 transition duration-750 shadow-md" href="/contact">Contact me</a>
+            <a class="font-sans inline-block px-3 py-1 text-sm font-semibold text-gray-700 border border-gray-400 rounded hover:bg-blue-200 hover:opacity-40 ml-6 transition duration-750 shadow-md" href="mailto:jakeoliverlee@gmail.com">Contact me</a>
           </div>
         </div>
       </header>
@@ -54,7 +54,7 @@
     </div>
     <div class="container mx-auto h-full bg-white m-2 px-6 rounded-lg">
       <div id="about-me" class="mt-7 ml-4 p-3">
-          <h1 class="text-4xl font-bold">lorv em and alfie</h1>
+          <h1 class="text-4xl font-bold">A little...about...me!</h1>
           <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et lorem at turpis congue aliquet. Donec tellus justo, euismod eu viverra sit amet, vulputate convallis erat. Sed eu elementum justo, ac ornare nisi. In interdum erat purus, eu porttitor dolor pulvinar id. Suspendisse scelerisque ultrices nulla nec consectetur. Curabitur nec sapien at urna egestas faucibus. Pellentesque tempor lacinia dolor, in euismod nisi lobortis non. Sed quis ante nunc. Morbi laoreet lorem sit amet ligula venenatis, ut lobortis sapien fringilla. Cras id mauris scelerisque, placerat tortor nec, vehicula ex. Vestibulum et turpis arcu. Pellentesque euismod est at arcu tempor, in efficitur sapien maximus. Nulla tristique lorem et quam fermentum, eget posuere sem blandit. Sed ac risus tempus, fermentum neque a, tempor odio. Vivamus ultricies nisi sit amet tincidunt laoreet. Sed in consequat nibh.
           </p>
@@ -72,11 +72,11 @@
           </span>
           <span class="block ml-4">
             <div class="flex space-x-2 items-center">
-              <img class="w-6 h-6 rounded-full shadow-md border border-white" src="assets/svgs/aws-icon.svg" alt="AWS Icon">
+              <img class="w-10 h-10 rounded-full shadow-md border border-white p-1" src="assets/svgs/aws-svgrepo-com (1).svg" alt="AWS Icon">
               <span class="text-md font-medium">Amazon Web Services</span>
             </div>
             <p class="ml-10 mt-2 text-sm text-gray-600">
-              <strong>DCO Team Lead</strong>, <em>01/2023-present</em>
+              <strong>DCO Team Lead</strong>, <em><span style="opacity: 0.7;">01/2023-present</em></span>
             </p>
             <p class="ml-14 mt-2 text-sm text-gray-600 italic">
               Description of position 1 at Company 1:
@@ -87,7 +87,7 @@
               </ul>
             </p>
             <p class="ml-10 mt-4 text-sm text-gray-600">
-              DCO 4, <em>12/2022 - present</em>
+              Datacentre Operations Tech II, <em><span style="opacity: 0.7;">12/2022 - present</em></span>
               <span class="ml-2">
                 <i class="fas fa-arrow-up text-blue-500"></i>
               </span>
@@ -101,7 +101,7 @@
               </ul>
             </p>
             <p class="ml-10 mt-4 text-sm text-gray-600">
-              DCO 3, <em>11/2020 - 12/2022</em>
+              Datacentre Operations Tech I, <em><span style="opacity: 0.7;">11/2020 - 12/2022 · 2 yrs 1 mo</em></span>
               <span class="ml-2">
                 <i class="fas fa-arrow-up text-blue-500"></i>
               </span>
@@ -116,12 +116,10 @@
             </p>
             </ul>
           </span>
-
-
           <span class="block ml-4">
             <div class="flex space-x-2 items-center">
-              <span class="bullet">&bull;</span>
-              <span class="text-md font-medium">Company 2</span>
+              <img class="w-10 h-10 rounded-full shadow-md border border-white p-1" src="assets/svgs/QQ.L.svg" alt="QinetiQ icon">
+              <span class="text-md font-medium">QinetiQ</span>
             </div>
             <p class="ml-10 mt-2 text-sm text-gray-600">
               Position 2, <em>Date 2</em>
@@ -147,6 +145,7 @@
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="index.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="email.js"></script>
     <script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
