add education section, technical skills section, also add img for college

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -60,14 +60,15 @@
           </p>
       </div>
       <hr class="opacity-5 m-2">
-      <div class="space-y-4 my-4 m-2 mt-4 w-1/2 rounded-2xl border p-6 shadow-md">
-        <div class="space-y-4">
-          <span class="block ml-2">
-            <div class="space-x-4 flex items-center">
-              <span class="material-symbols-outlined my-2">
-                work
-              </span>
-              <span class="text-lg font-medium">Work Experience</span>
+      <div class="flex">
+        <div class="space-y-4 my-4 m-2 mt-4 w-1/2 rounded-2xl border p-6 shadow-md">
+          <div class="space-y-4">
+            <span class="block ml-2">
+              <div class="space-x-4 flex items-center">
+                <span class="material-symbols-outlined my-2">
+                  work
+                </span>
+                <span class="text-lg font-medium">Work Experience</span>
             </div>
           </span>
           <span class="block ml-4">
@@ -76,7 +77,7 @@
               <span class="text-md font-medium">Amazon Web Services</span>
             </div>
             <p class="ml-10 mt-2 text-sm text-gray-600">
-              <strong>DCO Team Lead</strong>, <em><span style="opacity: 0.7;">01/2023-present</em></span>
+              <strong>DCO Team Lead</strong>, <em><span style="opacity: 0.7;" class="ml-1">01/2023-present</em></span>
             </p>
             <p class="ml-14 mt-2 text-sm text-gray-600 italic">
               Description of position 1 at Company 1:
@@ -87,7 +88,7 @@
               </ul>
             </p>
             <p class="ml-10 mt-4 text-sm text-gray-600">
-              Datacentre Operations Tech II, <em><span style="opacity: 0.7;">12/2022 - present</em></span>
+              Datacentre Operations II, <em><span style="opacity: 0.7;">12/2022 - present</em></span>
               <span class="ml-2">
                 <i class="fas fa-arrow-up text-blue-500"></i>
               </span>
@@ -136,6 +137,64 @@
               </li>
             </ul>
           </span>
+        </div>
+        </div>
+
+        <div class="flex flex-wrap">
+          <!-- Technical Skills Section -->
+          <div class="w-full ml-4">
+            <div class="space-y-4 my-4 m-2 mt-4 w-full rounded-2xl border p-6 shadow-md">
+              <div class="space-y-4">
+                <span class="block ml-2">
+                  <div class="space-x-4 flex items-center">
+                    <span class="material-symbols-outlined my-2">
+                      code
+                    </span>
+                    <span class="text-lg font-medium">Technical Skills</span>
+                  </div>
+                </span>
+                <span class="block ml-4">
+                  <ul class="list-disc ml-8 mt-2">
+                    <li class="text-sm text-gray-600">Skill 1</li>
+                    <li class="text-sm text-gray-600">Skill 2</li>
+                    <li class="text-sm text-gray-600">Skill 3</li>
+
+                  </ul>
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Education Section -->
+          <div class="w-full ml-4">
+            <div class="space-y-4 my-4 m-2 mt-4 w-full rounded-2xl border p-6 shadow-md">
+              <div class="space-y-4">
+                <span class="block ml-2">
+                  <div class="space-x-4 flex items-center">
+                    <span class="material-symbols-outlined my-2">
+                      school
+                    </span>
+                    <span class="text-lg font-medium">Education</span>
+                  </div>
+                </span>
+                <span class="block ml-4">
+                  <div class="flex space-x-2 items-center">
+                    <img class="w-10 h-10 rounded-full shadow-md border border-white p-1" src="assets/images/esher.jpg" alt="University Icon">
+                    <span class="text-md font-medium">Esher College</span>
+                  </div>
+                  <p class="ml-10 mt-2 text-sm text-gray-600">
+                    <strong>A-Levels: Mathematics, IT, History</strong>, <em><span style="opacity: 0.7;" class="ml-1">2017-2019</em></span>
+                  </p>
+                  <p class="ml-14 mt-2 text-sm text-gray-600">
+                    Mathematics: B, IT: A*, History: B
+                  </p>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
