--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -56,7 +56,14 @@
       <div id="about-me" class="mt-7 ml-4 p-3">
           <h1 class="text-4xl font-bold">A little...about...me!</h1>
           <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque et lorem at turpis congue aliquet. Donec tellus justo, euismod eu viverra sit amet, vulputate convallis erat. Sed eu elementum justo, ac ornare nisi. In interdum erat purus, eu porttitor dolor pulvinar id. Suspendisse scelerisque ultrices nulla nec consectetur. Curabitur nec sapien at urna egestas faucibus. Pellentesque tempor lacinia dolor, in euismod nisi lobortis non. Sed quis ante nunc. Morbi laoreet lorem sit amet ligula venenatis, ut lobortis sapien fringilla. Cras id mauris scelerisque, placerat tortor nec, vehicula ex. Vestibulum et turpis arcu. Pellentesque euismod est at arcu tempor, in efficitur sapien maximus. Nulla tristique lorem et quam fermentum, eget posuere sem blandit. Sed ac risus tempus, fermentum neque a, tempor odio. Vivamus ultricies nisi sit amet tincidunt laoreet. Sed in consequat nibh.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+
           </p>
       </div>
       <hr class="opacity-5 m-2">
