--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -26,7 +26,7 @@
   <body class="flex flex-col items-center bg-slate-100">
     <div id="main" class="container mx-auto bg-white m-2 px-6 rounded-lg dark:bg-slate-900">
       <header class="blog-header py-3">
-        <div class="flex items-center justify-around">
+        <div class="flex items-center justify-between">
           <div class="w-1/4">
             <div class="social-icons">
               <a href="https://github.com/jakeoliverlee"><i class="fab fa-github"></i></a>
@@ -46,26 +46,42 @@
     </div>
 
     <div class="py-1 nav-scroller mb-2 mt-1 ml-5 justify-start text-left rounded-full bg-white/90 shadow-md text-sm font-medium">
-      <nav class=" px-3 nav d-flex justify-content-between">
-        <a id="work-experience-link" class="font-sans px-3 py-2 text-muted" href="#">Projects</a>
-        <a id="projects-link" class="font-sans px-3 py-2 text-muted" href="#">Work</a>
-        <a id="recognition-link" class="font-sans px-3 py-2 text-muted" href="#">Gadgets</a>
+      <nav class="px-3 nav d-flex justify-between">
+        <div class="flex-1">
+          <a id="work-experience-link" class="font-sans block px-3 py-2 text-muted" href="#">Projects</a>
+        </div>
+        <div class="flex-1">
+          <a id="projects-link" class="font-sans block px-3 py-2 text-muted" href="#">Work</a>
+        </div>
+        <div class="flex-1">
+          <a id="recognition-link" class="font-sans block px-3 py-2 text-muted" href="#">Gadgets</a>
+        </div>
       </nav>
     </div>
+
     <div class="container mx-auto h-full bg-white m-2 px-6 rounded-lg">
       <div id="about-me" class="mt-7 ml-4 p-3">
-          <h1 class="text-4xl font-bold">A little...about...me!</h1>
-          <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-
-          </p>
+        <div class="flex">
+          <div class="flex-1">
+            <h1 class="text-4xl font-bold">A little...about...me!</h1>
+            <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Pellentesque
+            </p>
+          </div>
+          <div class="flex-none">
+            <img src="assets/images/about.jpg" class="w-44 h-44 mr-24 my-2 mb-8 rounded-full p-2" alt="about_me">
+          </div>
+        </div>
       </div>
+
+
       <hr class="opacity-5 m-2">
       <div class="flex">
         <div class="space-y-4 my-4 m-2 mt-4 w-1/2 rounded-2xl border p-6 shadow-md">
