add pic to about me section

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -61,7 +61,7 @@
 
     <div class="container mx-auto h-full bg-white m-2 px-6 rounded-lg">
       <div id="about-me" class="mt-7 ml-4 p-3">
-        <div class="flex">
+        <div class="flex flex-wrap md:flex-no-wrap">
           <div class="flex-1">
             <h1 class="text-4xl font-bold">A little...about...me!</h1>
             <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl">
@@ -75,11 +75,12 @@
               Pellentesque
             </p>
           </div>
-          <div class="flex-none">
-            <img src="assets/images/about.jpg" class="w-44 h-44 mr-24 my-2 mb-8 rounded-full p-2" alt="about_me">
+          <div class="flex-none mt-4 md:mt-0 ml-16 mb-4">
+            <img src="assets/images/about.jpg" class="w-44 h-44 mr-24 my-2 mb-16 rounded-full p-1 shadow-md border border-white" alt="about_me">
           </div>
         </div>
       </div>
+
 
 
       <hr class="opacity-5 m-2">
