add download resume button

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -88,11 +88,13 @@
         <div class="space-y-4 my-4 m-2 mt-4 w-1/2 rounded-2xl border p-6 shadow-md">
           <div class="space-y-4">
             <span class="block ml-2">
-              <div class="space-x-4 flex items-center">
-                <span class="material-symbols-outlined my-2">
-                  work
-                </span>
-                <span class="text-lg font-medium">Work Experience</span>
+              <div class="flex items-center justify-between">
+                <div class="flex space-x-4 items-center">
+                  <span class="material-symbols-outlined my-2">
+                    work
+                  </span>
+                  <span class="text-lg font-medium">Work Experience</span>
+                </div>
             </div>
           </span>
           <span class="block ml-4">
@@ -160,9 +162,17 @@
                 </span>
               </li>
             </ul>
-          </span>
-        </div>
-        </div>
+          </span>   
+        </li>
+      </ul>
+      <div class="flex items-center justify-center mt-14">
+        <a href="assets/cv.pdf" class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-md">
+          Download CV
+        </a>
+      </div>
+    </span>
+  </div>
+  </div>
 
         <div class="flex flex-wrap">
           <!-- Technical Skills Section -->
