--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -21,6 +21,17 @@
     <link href="index.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script>
+      if (
+        localStorage.getItem('color-theme') === 'dark' ||
+        (!('color-theme' in localStorage) &&
+          window.matchMedia('(prefers-color-scheme: dark)').matches)
+      ) {
+        document.documentElement.classList.add('dark');
+      } else {
+        document.documentElement.classList.remove('dark');
+      }
+    </script>
   </head>
 
   <body class="flex flex-col items-center bg-slate-100">
@@ -38,7 +49,7 @@
             <a class="blog-header-logo text-dark" href="#">Jake Lee</a>
           </div>
           <div class="w-1/4 flex justify-end items-center">
-            <img src="assets/images/dark theme icon/moon.png" id="dark_mode_icon" class="hover:shadow-2xl hover:shadow-blue-500/50">
+            <img src="assets/images/dark theme icon/moon.png" id="toggleDarkModeButton" class="hover:shadow-2xl hover:shadow-blue-500/50">
             <a class="font-sans inline-block px-3 py-1 text-sm font-semibold text-gray-700 border border-gray-400 rounded hover:bg-blue-200 hover:opacity-40 ml-6 transition duration-750 shadow-md" href="mailto:jakeoliverlee@gmail.com">Contact me</a>
           </div>
         </div>
@@ -51,7 +62,7 @@
           <a id="work-experience-link" class="font-sans block px-3 py-2 text-muted" href="#">Projects</a>
         </div>
         <div class="flex-1">
-          <a id="projects-link" class="font-sans block px-3 py-2 text-muted" href="#">Work</a>
+          <a id="projects-link" class="font-sans block px-3 py-2 text-muted" href="/work">Work</a>
         </div>
         <div class="flex-1">
           <a id="recognition-link" class="font-sans block px-3 py-2 text-muted" href="#">Gadgets</a>
@@ -316,7 +327,7 @@
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="index.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="email.js"></script>
+    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     <script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
@@ -324,6 +335,7 @@
         text: 'Thumbnail'
       });
     </script>
+    
 
   </body>
 </html>
