--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -138,6 +138,9 @@
                 <li>
                   <img class="h-9 w-9 inline-block mr-2 my-3 hover:scale-110" src="assets/svgs/aws-icon-services.svg" title="AWS Services">
                 </li>
+                <li>
+                  <img class="h-9 w-9 my-2 inline-block mr-2 hover:scale-110" src="assets/svgs/firebase-icon.svg" title="Firebase">
+                </li>
               </ul>
               <ul class="mb-4 my-2">
                 <li>
@@ -394,7 +397,7 @@
             <h4 class="text-xl font-bold text-gray-900 dark:text-white">Who are my user base?</h4>
         </div>
     </div>
-    <ul class="list-disc ml-6 mb-4 text-gray-500 dark:text-gray-400">
+    <ul class="list-disc ml-6 mb-5 text-gray-500 dark:text-gray-400">
       <li>Recruiters, hiring managers, clients as well as other potential employers.</li>
     </ul>
     <div class="flex items-start mb-5">
