--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="w-full sm:w-1/4 text-center">
-          <a class="blog-header-logo text-dark" href="#">Jake Test5</a>
+          <a class="blog-header-logo text-dark" href="#">Jake Lee</a>
         </div>
         <div class="w-full sm:w-1/4 flex justify-end items-center">
         <a type="button" title="Opens an email window" id="Contact_Me" class="relative animate-bounce hover:animate-none text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-4 py-2  dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700 shadow-md" href="mailto:jakeoliverlee@gmail.com">Contact Me</a>
