--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -375,12 +375,12 @@
           v1.0.0
         </span>
           </li>
-          <li class="flex items-center">
-            <img class="w-8 h-8 mr-5 inline-block p-1 rounded-full" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
-            <img class="w-8 h-8 mr-5 inline-block  rounded-full" src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS" >
-            <img class="w-8 h-8 mr-5 inline-block  rounded-full" src="assets/svgs/tailwind-css-icon.svg" alt="Tailwind" >
-            <img class="w-8 h-8 mr-5 inline-block  rounded-full" src="assets/svgs/firebase-icon.svg" alt="Firebase" >
-            <img class="w-8 h-8 inline-block rounded-full" src="assets/svgs/icons8-mongodb.svg" alt="Mongo" >
+          <li class="flex items-center" id="tech-logos">
+            <img class="w-8 h-8 mr-5 inline-block p-1 rounded-full slide-in-1" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
+            <img class="w-8 h-8 mr-5 inline-block rounded-full slide-in-2" src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS">
+            <img class="w-8 h-8 mr-5 inline-block rounded-full slide-in-3" src="assets/svgs/tailwind-css-icon.svg" alt="Tailwind">
+            <img class="w-8 h-8 mr-5 inline-block rounded-full slide-in-4" src="assets/svgs/firebase-icon.svg" alt="Firebase">
+            <img class="w-8 h-8 inline-block rounded-full slide-in-5" src="assets/svgs/icons8-mongodb.svg" alt="Mongo">
           </li>
       </ul>
   </div>
