add cdn back for dev purposes

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -10,12 +10,10 @@
 
     <title>Jake Lee | Resume</title>
 
-    <!-- Bootstrap core CSS -->
-    <!-- Icons for socials -->
     <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/85539b08a7.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@codersrank/skills-chart@x.x.x/codersrank-skills-chart.min.js" defer></script>
-    <!-- Custom styles for this template -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
@@ -78,7 +76,7 @@
       <div id="about-me" class="select-none mt-7 ml-4 py-4 px-4 h-full mx-auto max-w-screen-xl lg:py-8">
         <div class="flex flex-wrap md:flex-no-wrap justify-center">
           <div class="flex-1 mx-auto text-center md:text-left">
-            <h1 class="text-3xl md:text-4xl font-bold pointer-events-none">About me</h1>
+            <h1 class="text-gray-900 dark:text-white text-3xl md:text-4xl font-bold pointer-events-none">About me</h1>
             <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl sm:mb-4 sm:mx-auto mx-auto">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Pellentesque Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -614,7 +612,7 @@
     </div>
     <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
     <div class="sm:flex sm:items-center sm:justify-between">
-        <span id="copyright_year" class="text-sm text-gray-500 sm:text-center dark:text-gray-400"><a href="https://flowbite.com/" class="hover:underline">© 2023. Jake Lee</a>.
+        <span id="copyright_year" class="text-sm text-gray-500 sm:text-center"><a href="https://flowbite.com/" class="hover:underline">© 2023. Jake Lee</a>.
         </span>
         <div class="text-sm text-gray-500 sm:text-center dark:text-gray-400"></div>
         <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
